force-app/main/default/objects/Event_Organizer__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <description>Event organizer alternative email address.</description>
    <inlineHelpText>Enter an alternative email.</inlineHelpText>
    <label>Alternative Email</label>
    <type>Email</type>
</CustomField>