force-app/main/default/objects/Event_Organizer__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <description>Event organizer alternative phone number.</description>
    <inlineHelpText>Enter an alternative phone number.</inlineHelpText>
    <label>Alternative Phone</label>
    <type>Phone</type>
</CustomField>