force-app/main/default/objects/Event_Organizer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Event organizer email address.</description>
    <inlineHelpText>Enter the email.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>