force-app/main/default/objects/Event_Organizer__c/fields/LocationC__c.field-meta.xml
<CustomField>
    <fullName>LocationC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Relationship with the object Location</description>
    <inlineHelpText>Lookup Relationship with the object Location</inlineHelpText>
    <label>LocationC</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Event Organizers</relationshipLabel>
    <relationshipName>Event_Organizers</relationshipName>
    <type>Lookup</type>
</CustomField>