force-app/main/default/objects/Event_Organizer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Event organizer phone number.</description>
    <inlineHelpText>Enter the phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>